# Discord-Fancy-Presence

./: .eslintrc.cjs  NOTES.md  README.md  app-id-list.json  bun.lockb  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  error.rs  fish.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/activity/: activity_manager.rs  error.rs
src-tauri/src/processes/: error.rs  macos.rs
src-tauri/src/utils/: activity_manager.rs  discord_activity.rs  foreground_processes.rs  mod.rs
src-tauri/src/utils/activity/: activity_manager.rs  activity_payload.rs  error.rs  helpers.rs  mod.rs
src-tauri/src/utils/foreground_processes/: macos.rs  mod.rs  windows.rs
src-tauri/src/utils/processes/: macos.rs  mod.rs  windows.rs
src/assets/: icons.tsx
src/components/: AppInitializer.tsx  AppLoader.tsx  Sidebar.tsx  icons.tsx  sidebar.tsx
src/components/UI/: Input.tsx  Toggle.tsx
src/components/bind/: ProcessList.tsx  SearchField.tsx
src/components/home/: application-select.tsx
src/components/home/AppInfo/: Buttons.tsx  Images.tsx  Other.tsx  Texts.tsx
src/components/home/Preview/: Warnings.tsx  preview.module.sass
src/components/home/activity-info-form/: activity-info-form.tsx  buttons-form.tsx  extra-form.tsx  images-form.tsx  index.ts  text-form.tsx
src/components/home/activity-preview/: activity-preview.tsx  index.ts
src/components/home/ppreview/: ppreview.tsx
src/components/home/preview/: preview.tsx
src/components/index/: Preview.tsx  Select.tsx
src/components/index/AppInfo/: AppInfo.tsx  Buttons.tsx  Images.tsx  Other.tsx  Texts.tsx
src/components/index/Preview/: Preview.tsx  Warnings.tsx
src/components/pages/bind/: ProcessList.tsx  SearchField.tsx
src/components/pages/home/: Select.tsx
src/components/pages/home/AppInfo/: Other.tsx  Texts.tsx
src/components/pages/home/Preview/: Warnings.tsx
src/components/pages/index/: AppInfo.tsx  Preview.tsx  Select.tsx
src/components/pages/index/AppInfo/: Images.tsx  Other.tsx  Texts.tsx
src/components/sidebar/: sidebar.module.sass  sidebar.tsx
src/components/ui/: button.tsx  input.module.sass  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
src/components/ui/input-old/: input.module.scss  input.tsx
src/components/ui/select-old/: select.module.scss  select.tsx
src/contexts/: SettingsContext.tsx
src/dump/: dummy.ts
src/hooks/: use-fish.ts  useDirector.tsx  useProcess.tsx  useRecorder.tsx  useStorage.tsx
src/layouts/: AppLayout.tsx  Tabs.tsx  app-layout.tsx
src/lib/: storage.ts
src/lib/api/: index.ts  types.ts
src/pages/: _app.tsx  about.tsx  app-id-list.tsx  appFinder.tsx  bind-apps.tsx  bind.tsx  dev.tsx  events.tsx  faq.tsx  fish.tsx  index.tsx  settings.tsx
src/services/: index.ts  storage.service.ts  task.service.ts
src/styles/: applayout.module.sass  global.sass  index.sass  sidebar.module.sass
src/styles/components/: tabs.module.sass
src/styles/pages/: about.module.sass  app-id-list.module.sass  appFinder.module.sass  bind-apps.module.sass  bind.module.sass  faq.module.sass  index.module.sass  library.module.sass  settings.module.sass
src/utils/: checkImage.ts  discordRPC.js  discordRPC.ts  games.json  getMeta.ts  retrieveGames.js
