[package]
name = "fancy_drpc"
version = "0.1.1"
description = "An app that allows you to set custom discord status for app"
authors = ["Everrynn", "SketchPiece"]
license = ""
repository = "https://github.com/Rynn-Lee/Fancy-DRPC"
default-run = "fancy_drpc"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fancy_drpc"
path = "src/lib.rs"


[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
discord-rich-presence = "0.2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = ["shell-open", "system-tray"] }
sysinfo = "0.31.2"
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1.0.63"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
