[package]
name = "fancy_presence"
version = "1.0.0"
description = "An app that allows you to set custom discord status for app"
authors = ["Everrynn", "SketchPiece"]
license = ""
repository = "https://github.com/Rynn-Lee/Discord-Fancy-Presence"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fancy_presence"
crate-type = ["lib", "staticlib", "cdylib"]


[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
discord-rich-presence = "0.2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
sysinfo = "0.31.2"
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1.0.63"
tauri-plugin-shell = "2.0.0-alpha.2"

# temp dependency fix before tauri v2.0 is stable
rustls-pemfile = { version = "2.0.0-alpha.1" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
